# midas-kiwi

Apps/Android/Kiwi/jni/: KiwiNative.cpp
Apps/Android/Kiwi/res/layout/: pvremote_dialog.xml
Apps/Android/Kiwi/res/values/: strings.xml
Apps/Android/Kiwi/src/com/kitware/KiwiViewer/: KiwiGLSurfaceView.java  KiwiNative.java  KiwiViewerActivity.java
Apps/iOS/Kiwi/Kiwi.xcodeproj/: project.pbxproj
Apps/iOS/KiwiMidas/KiwiMidas/: AppDelegate.m  DefaultSettings.plist  DocumentsTableViewController.m  IntroViewController.mm  KiwiMidas-Info.plist  MyGLKViewController.mm  MyGestureHandler.mm  MyTabBarController.m  PVRemoteViewController.h  PVRemoteViewController.m  SceneSettingsController.h  SceneSettingsController.m  generateExportedTypes.py  kiwi.xcconfig  kiwiCloudApp.h
Apps/iOS/KiwiMidas/KiwiMidas.xcodeproj/: project.pbxproj
Apps/iOS/KiwiMidas/KiwiMidas/en.lproj/: MainStoryboard_iPad.storyboard
CMake/: makeFramework.sh  ves-superbuild.cmake
src/kiwi/: CMakeLists.txt  headers.cmake  vesKiwiDataConversionTools.cpp  vesKiwiDataConversionTools.h  vesKiwiImageWidgetRepresentation.cpp  vesKiwiImageWidgetRepresentation.h  vesKiwiPVRemoteRepresentation.cpp  vesKiwiPolyDataRepresentation.cpp  vesKiwiPolyDataRepresentation.h  vesKiwiTestHelper.h  vesKiwiViewerApp.cpp  vesKiwiViewerApp.h  vesMidasClient.cpp  vesPVWebClient.cpp  vesPVWebClient.h  vesPVWebDataSet.cpp
src/kiwi/Testing/: CMakeLists.txt  TestKiwiViewer.cpp  TestPVRemote.cpp
src/shaders/: vesShader_vert.glsl
src/ves/: vesRenderer.cpp  vesRenderer.h  vesTestHelper.h
